--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ go:
 deploy:
 - provider: script
   skip_cleanup: true
-  script: curl -sL https://git.io/goreleaser | bash
+  script: curl -sL https://git.io/goreleaser | GO111MODULE=on bash
