--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,6 @@ deploy:
 - provider: script
   skip_cleanup: true
   script: curl -sL https://git.io/goreleaser | GO111MODULE=on bash
+  on:
+    tags: true
+    condition: $TRAVIS_BRANCH = rewrite
